Fix text being too large on mobile phones.

--- a/Sources/SASS/generic/_gallery.scss
+++ b/Sources/SASS/generic/_gallery.scss
@@ -5,7 +5,7 @@
 	grid-column-gap: 20px;
 	max-width: 100%;
 	* { align-self: center; }
-	img { max-width: 100%; }
+	img { max-width: 95%; }
 
 	&-clickable img:hover {
 		cursor: pointer;
